prevent unnecessary web calls when checking ilp solver